vathuglife: temporarily disabled CORS